--- a/index.html
+++ b/index.html
@@ -38,8 +38,68 @@
             </ul>
         </div>
     </nav>
+    
+<!-- === Ravens Slideshow === -->
+<section id="team-history">
+    <div id="historyCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Carosel3.jpeg" class="d-block w-100" alt="Team Huddle">
+                <div class="carousel-overlay"></div>
+                <div class="carousel-caption">
+                    <h1 class="ravens-text">RAVENS</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Carosel1.jpg" class="d-block w-100" alt="Super Bowl XXXV Victory">
+                <div class="carousel-overlay"></div>
+                <div class="carousel-caption">
+                    <h1 class="ravens-text">RAVENS</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Carosel0.jpg" class="d-block w-100" alt="Lamar Jackson Spinning Football">
+                <div class="carousel-overlay"></div>
+                <div class="carousel-caption">
+                    <h1 class="ravens-text">RAVENS</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Carosel4.jpg" class="d-block w-100" alt="Super Bowl XLVII Victory">
+                <div class="carousel-overlay"></div>
+                <div class="carousel-caption">
+                    <h1 class="ravens-text">RAVENS</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Carosel5.jpg" class="d-block w-100" alt="Game Time">
+                <div class="carousel-overlay"></div>
+                <div class="carousel-caption">
+                    <h1 class="ravens-text">RAVENS</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Carosel2.jpg" class="d-block w-100" alt="Super Bowl XLVII Victory">
+                <div class="carousel-overlay"></div>
+                <div class="carousel-caption">
+                    <h1 class="ravens-text">RAVENS</h1>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#historyCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#historyCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</section>
 
-  
+
+
+    
 
     <!-- Footer -->
     <footer id="team-resources" class="container-fluid py-4">
