--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="historyCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Carosel3.jpeg" class="d-block w-100" alt="Team Huddle">
+                <img src="Carosel3.jpg" class="d-block w-100" alt="Team Huddle">
                 <div class="carousel-overlay"></div>
                 <div class="carousel-caption">
                     <h1 class="ravens-text">RAVENS</h1>
@@ -54,8 +54,6 @@
                 <img src="Carosel1.jpg" class="d-block w-100" alt="Super Bowl XXXV Victory">
                 <div class="carousel-overlay"></div>
                 <div class="carousel-caption">
-                    <h1 class="ravens-text">RAVENS</h1>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Carosel0.jpg" class="d-block w-100" alt="Lamar Jackson Spinning Football">
@@ -68,22 +66,16 @@
                 <img src="Carosel4.jpg" class="d-block w-100" alt="Super Bowl XLVII Victory">
                 <div class="carousel-overlay"></div>
                 <div class="carousel-caption">
-                    <h1 class="ravens-text">RAVENS</h1>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Carosel5.jpg" class="d-block w-100" alt="Game Time">
                 <div class="carousel-overlay"></div>
                 <div class="carousel-caption">
-                    <h1 class="ravens-text">RAVENS</h1>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Carosel2.jpg" class="d-block w-100" alt="Super Bowl XLVII Victory">
                 <div class="carousel-overlay"></div>
                 <div class="carousel-caption">
-                    <h1 class="ravens-text">RAVENS</h1>
-                </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#historyCarousel" data-bs-slide="prev">
@@ -97,6 +89,37 @@
     </div>
 </section>
 
+
+                <!-- === History Section === -->
+<section id="key-moments" class="container my-5">
+    <h2 class="text-center mb-4">Key Moments in History</h2>
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="moment-container">
+                <img src="Moment1.jpg" alt="Moment 1" class="img-fluid">
+                <div class="overlay">
+                    <p class="ravens-text">In 1996, the Cleveland Browns relocated to Baltimore, and the Ravens were born, named after Edgar Allan Poe’s famous poem "The Raven."</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="moment-container">
+                <img src="Moment2.jpg" alt="Moment 2" class="img-fluid">
+                <div class="overlay">
+                    <p class="ravens-text">In 2000, under coach Brian Billick, the Ravens won their first Super Bowl, defeating the New York Giants 34-7.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="moment-container">
+                <img src="Moment3.jpg" alt="Moment 3" class="img-fluid">
+                <div class="overlay">
+                    <p class="ravens-text">In 2012, the Ravens won their second Super Bowl, defeating the San Francisco 49ers 34-31, led by MVP Joe Flacco.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
     
