--- a/index.html
+++ b/index.html
@@ -88,36 +88,49 @@
 </section>
 
 
-                <!-- === History Section === -->
+<!-- === History Section === -->
 <section id="key-moments" class="container my-5">
     <h2 class="text-center mb-4">Key Moments in History</h2>
     <div class="row">
+        <!-- Moment 1 -->
         <div class="col-md-4 mb-4">
             <div class="moment-container">
-                <img src="Moment1.jpg" alt="Moment 1" class="img-fluid">
+                <img src="Moment1.jpg" alt="Moment 1" class="img-fluid" width="100%">
                 <div class="overlay">
-                    <p class="ravens-text">In 1996, the Cleveland Browns relocated to Baltimore, and the Ravens were born, named after Edgar Allan Poe’s famous poem "The Raven."</p>
+                    <p class="ravens-text">
+                        In 1996, the Cleveland Browns relocated to Baltimore, and the Ravens were born, 
+                        named after Edgar Allan Poe’s famous poem "The Raven."
+                    </p>
                 </div>
             </div>
         </div>
+        <!-- Moment 2 -->
         <div class="col-md-4 mb-4">
             <div class="moment-container">
-                <img src="Moment2.jpg" alt="Moment 2" class="img-fluid">
+                <img src="Moment2.jpg" alt="Moment 2" class="img-fluid" width="100%">
                 <div class="overlay">
-                    <p class="ravens-text">In 2000, under coach Brian Billick, the Ravens won their first Super Bowl, defeating the New York Giants 34-7.</p>
+                    <p class="ravens-text">
+                        In 2000, under coach Brian Billick, the Ravens won their first Super Bowl, defeating 
+                        the New York Giants 34-7.
+                    </p>
                 </div>
             </div>
         </div>
+        <!-- Moment 3 -->
         <div class="col-md-4 mb-4">
             <div class="moment-container">
-                <img src="Moment3.jpg" alt="Moment 3" class="img-fluid">
+                <img src="Moment3.jpg" alt="Moment 3" class="img-fluid" width="100%">
                 <div class="overlay">
-                    <p class="ravens-text">In 2012, the Ravens won their second Super Bowl, defeating the San Francisco 49ers 34-31, led by MVP Joe Flacco.</p>
+                    <p class="ravens-text">
+                        In 2012, the Ravens won their second Super Bowl, defeating the San Francisco 49ers 
+                        34-31, led by MVP Joe Flacco.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 
 
     
