--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     
 <!-- === Ravens Slideshow === -->
-<section id="team-history">
+<section id="home">
     <div id="historyCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -89,7 +89,7 @@
 
 
 <!-- === History Section === -->
-<section id="key-moments" class="container my-5">
+<section id="history" class="container my-5">
     <h2 class="text-center mb-4">Key Moments in History</h2>
     <div class="row">
         <!-- Moment 1 -->
