--- a/index.html
+++ b/index.html
@@ -133,6 +133,50 @@
 
 
 
+
+ <!-- === Players Page === -->
+    <section id="players" class="container my-5">
+        <h2 class="text-center mb-4">Notable Players and Legends</h2>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="RayLewis.jpg" class="card-img-top" alt="Ray Lewis">
+                    <div class="card-body">
+                        <h5 class="card-title">Ray Lewis</h5>
+                        <p class="card-text">The heart of the Ravens defense, leading them to two Super Bowl victories.</p>
+                    </div>
+                </div>
+            </div>
+              <div class="col-md-3">
+                <div class="card">
+                    <img src="LamarJackson.jpg" class="card-img-top" alt="Lamar Jackson">
+                    <div class="card-body">
+                        <h5 class="card-title">Lamar Jackson</h5>
+                        <p class="card-text">Dynamic quarterback and 2019 NFL MVP.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="EdReed.jpg" class="card-img-top" alt="Ed Reed">
+                    <div class="card-body">
+                        <h5 class="card-title">Ed Reed</h5>
+                        <p class="card-text">Hall of Fame safety known for his playmaking and interceptions.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="JoeFlacco.jpg" class="card-img-top" alt="Joe Flacco">
+                    <div class="card-body">
+                        <h5 class="card-title">Joe Flacco</h5>
+                        <p class="card-text">Super Bowl XLVII MVP, delivering clutch performances in the playoffs.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+                   
     
 
     <!-- Footer -->
