--- a/index.html
+++ b/index.html
@@ -134,6 +134,56 @@
 
 
 
+
+                <!-- === Recent Stats Section === -->
+<section id="recent-stats" class="py-5" style="background-color: gold;">
+    <div class="container">
+        <!-- Section Header -->
+        <h2 class="ravens-text text-center mb-5">Recent Stats</h2>
+        
+        <!-- Recent Stats with Icons -->
+        <div class="row text-center mb-5">
+            <div class="col-md-4">
+                <img src="icon1.jpg" alt="Icon 1" class="img-fluid mb-3">
+                <p class="text-dark fw-bold">Lamar Jackson’s Career Passing Yards:<br>12,209</p>
+            </div>
+            <div class="col-md-4">
+                <img src="icon2.jpg" alt="Icon 2" class="img-fluid mb-3">
+                <p class="text-dark fw-bold">Defensive Ranking (2023):<br>3rd in the NFL</p>
+            </div>
+            <div class="col-md-4">
+                <img src="icon3.jpg" alt="Icon 3" class="img-fluid mb-3">
+                <p class="text-dark fw-bold">Pro Bowl Selections:<br>Justin Tucker (7 times)</p>
+            </div>
+        </div>
+
+        <!-- Team Stats -->
+        <div class="row text-center mb-5">
+            <div class="col-md-6">
+                <div class="p-4 losses">
+                    <h5 class="text-white">Losses</h5>
+                    <p class="text-white">7</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="p-4 wins">
+                    <h5 class="text-white">Wins</h5>
+                    <p class="text-white">10</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Key Achievements -->
+        <div class="key-achievement position-relative text-center p-4">
+            <h4 class="text-dark fw-bold">Key Achievement</h4>
+            <p class="text-dark">The Ravens made the playoffs in the 2024 season, continuing their strong playoff contender performance.</p>
+            <img src="icon4.jpg" alt="Achievement Icon" class="achievement-icon position-absolute">
+        </div>
+    </div>
+</section>
+
+                
+
  <!-- === Players Page === -->
     <section id="players" class="container my-5">
         <h2 class="text-center mb-4">Notable Players and Legends</h2>
