--- a/index.html
+++ b/index.html
@@ -157,18 +157,18 @@
             </div>
         </div>
 
-        <!-- Team Stats -->
+         <!-- Team Stats -->
         <div class="row text-center mb-5">
             <div class="col-md-6">
-                <div class="p-4 losses">
-                    <h5 class="text-white">Losses</h5>
-                    <p class="text-white">7</p>
+                <div class="p-4 wins"> <!-- Moved Wins here -->
+                    <h5 class="text-white">Wins</h5>
+                    <p class="text-white">10</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="p-4 wins">
-                    <h5 class="text-white">Wins</h5>
-                    <p class="text-white">10</p>
+                <div class="p-4 losses"> <!-- Moved Losses here -->
+                    <h5 class="text-white">Losses</h5>
+                    <p class="text-white">7</p>
                 </div>
             </div>
         </div>
