--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@
         <!-- Recent Stats with Icons -->
         <div class="row text-center mb-5">
             <div class="col-md-4">
-                <img src="icon1.jpg" alt="Icon 1" class="img-fluid mb-3">
+                <img src="Icon1.jpg" alt="Icon 1" class="img-fluid mb-3">
                 <p class="text-dark fw-bold">Lamar Jackson’s Career Passing Yards:<br>12,209</p>
             </div>
             <div class="col-md-4">
-                <img src="icon2.jpg" alt="Icon 2" class="img-fluid mb-3">
-                <p class="text-dark fw-bold">Defensive Ranking (2023):<br>3rd in the NFL</p>
+                <img src="Icon2.jpg" alt="Icon 2" class="img-fluid mb-3">
+                <p class="text-dark fw-bold">Defensive Ranking in the NFL:<br>(2023)</p>
             </div>
             <div class="col-md-4">
-                <img src="icon3.jpg" alt="Icon 3" class="img-fluid mb-3">
-                <p class="text-dark fw-bold">Pro Bowl Selections:<br>Justin Tucker (7 times)</p>
+                <img src="Icon3.jpg" alt="Icon 3" class="img-fluid mb-3">
+                <p class="text-dark fw-bold">Justin Tucker::<br>Pro Bowl Selections</p>
             </div>
         </div>
 
@@ -177,7 +177,6 @@
         <div class="key-achievement position-relative text-center p-4">
             <h4 class="text-dark fw-bold">Key Achievement</h4>
             <p class="text-dark">The Ravens made the playoffs in the 2024 season, continuing their strong playoff contender performance.</p>
-            <img src="icon4.jpg" alt="Achievement Icon" class="achievement-icon position-absolute">
         </div>
     </div>
 </section>
@@ -230,7 +229,7 @@
     
 
     <!-- Footer -->
-    <footer id="team-resources" class="container-fluid py-4">
+    <footer id="resources" class="container-fluid py-4">
         <div class="row">
             <div class="col-md-4">
                 <h5>Buy Tickets</h5>
