--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
                 <!-- === Recent Stats Section === -->
-<section id="recent-stats" class="py-5" style="background-color: gold;">
+<section id="recent-stats" class="py-5">
     <div class="container">
         <!-- Section Header -->
         <h2 class="ravens-text text-center mb-5">Recent Stats</h2>
