--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#history">History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#stats">Stats</a>
+                    <a class="nav-link" href="#recent-stats">Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#players">Players</a>
@@ -145,7 +145,7 @@
 
 
                 <!-- === Recent Stats Section === -->
-<section id="stats" class="py-5">
+<section id="recent-stats" class="py-5">
     <div class="container">
         <!-- Section Header -->
         <h2 class="ravens-text text-center mb-5">Recent Stats</h2>
