--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="moment-container">
                 <img src="Moment1.jpg" alt="Moment 1" class="img-fluid" width="100%">
                 <div class="overlay">
-                    <p class="ravens-text">
+                    <p class="text-white">
                         In 1996, the Cleveland Browns relocated to Baltimore, and the Ravens were born, 
                         named after Edgar Allan Poe’s famous poem "The Raven."
                     </p>
@@ -118,7 +118,7 @@
             <div class="moment-container">
                 <img src="Moment2.jpg" alt="Moment 2" class="img-fluid" width="100%">
                 <div class="overlay">
-                    <p class="ravens-text">
+                    <p class="text-white">
                         In 2000, under coach Brian Billick, the Ravens won their first Super Bowl, defeating 
                         the New York Giants 34-7.
                     </p>
@@ -130,7 +130,7 @@
             <div class="moment-container">
                 <img src="Moment3.jpg" alt="Moment 3" class="img-fluid" width="100%">
                 <div class="overlay">
-                    <p class="ravens-text">
+                    <p class="text-white">
                         In 2012, the Ravens won their second Super Bowl, defeating the San Francisco 49ers 
                         34-31, led by MVP Joe Flacco.
                     </p>
@@ -139,6 +139,7 @@
         </div>
     </div>
 </section>
+
 
                 
 <!-- Gold line below the history  -->
