--- a/index.html
+++ b/index.html
@@ -153,19 +153,19 @@
         <!-- Section Header -->
         <h2 class="ravens-text text-center mb-5">Recent Stats</h2>
         
-        <!-- Recent Stats with Icons -->
+       <!-- Recent Stats with Icons -->
         <div class="row text-center mb-5">
             <div class="col-md-4">
                 <img src="Icon1.jpg" alt="Icon 1" class="img-fluid mb-3">
-                <p class="text-dark fw-bold">Lamar Jackson’s Career Passing Yards:<br>12,209</p>
+                <p class="text-white fw-bold">Lamar Jackson’s Career Passing Yards:<br>12,209</p>
             </div>
             <div class="col-md-4">
                 <img src="Icon2.jpg" alt="Icon 2" class="img-fluid mb-3">
-                <p class="text-dark fw-bold">Defensive Ranking in the NFL<br>2023</p>
+                <p class="text-white fw-bold">Defensive Ranking in the NFL<br>2023</p>
             </div>
             <div class="col-md-4">
                 <img src="Icon3.jpg" alt="Icon 3" class="img-fluid mb-3">
-                <p class="text-dark fw-bold">Justin Tucker:<br>Pro Bowl Selections</p>
+                <p class="text-white fw-bold">Justin Tucker:<br>Pro Bowl Selections</p>
             </div>
         </div>
 
