--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Ravens Fan Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -58,29 +60,26 @@
             <div class="carousel-item">
                 <img src="Carosel1.jpg" class="d-block w-100" alt="Super Bowl XXXV Victory">
                 <div class="carousel-overlay"></div>
-                <div class="carousel-caption">
             </div>
             <div class="carousel-item">
                 <img src="Carosel0.jpg" class="d-block w-100" alt="Lamar Jackson Spinning Football">
                 <div class="carousel-overlay"></div>
-                <div class="carousel-caption">
             </div>
             <div class="carousel-item">
                 <img src="Carosel4.jpg" class="d-block w-100" alt="Super Bowl XLVII Victory">
                 <div class="carousel-overlay"></div>
-                <div class="carousel-caption">
             </div>
             <div class="carousel-item">
                 <img src="Carosel5.jpg" class="d-block w-100" alt="Game Time">
                 <div class="carousel-overlay"></div>
-                <div class="carousel-caption">
             </div>
             <div class="carousel-item">
                 <img src="Carosel2.jpg" class="d-block w-100" alt="Super Bowl XLVII Victory">
                 <div class="carousel-overlay"></div>
-                <div class="carousel-caption">
             </div>
         </div>
+        
+        <!-- Carousel Controls -->
         <button class="carousel-control-prev" type="button" data-bs-target="#historyCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
@@ -91,6 +90,7 @@
         </button>
     </div>
 </section>
+
 
                 
 <!-- Gold line below the slideshow  -->
@@ -269,5 +269,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <!-- Bootstrap CSS -->
+
 </body>
 </html>
